# reproduce-glow

./: InstrGenIncludes.h  NodeGenIncludes.h  ONNXModelWriterIncludes.h  README.md  mnist_result.txt  ptb_result.txt
examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mnist.cpp
examples/training/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Backend/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Backends/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Backends/CPU/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Backends/CPU/ClassGen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Backends/Interpreter/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Base/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/CodeGen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Converter/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ExecutionContext/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ExecutionEngine/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Exporter/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Flags/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Graph/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/IR/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Importer/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/LLVMIRCodeGen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Onnxifi/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Optimizer/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/Partitioner/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/PassManager/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
utils/: download_datasets_and_models.py
(+81 files in other folders)
